# bootstrap

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_requirements.txt  project_customization.txt  requirements.txt
.github/workflows/: ci.yml
docs/doxygen/: Doxyfile.in  main_page.md.in
docs/sphinx/: classes-and-functions.rst  conf.py.in  index.rst.in  settings.rst.in
src/: CMakeLists.txt
src/application/: CMakeLists.txt  application_settings.cpp  application_settings.h  icon.rc  main.cpp
tools/scripts/: Set-VsEnvironment.ps1  build.ps1
